wrap maybe fixes it on phone

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ header > .title {
 .content {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 footer {
